Update CensusDB .ipynb

--- a/CensusDB .ipynb
+++ b/CensusDB .ipynb
@@ -11422,7 +11422,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss"
+    "txt = 'welcome to the jungle'\n",
+    "x = txt.split()\n",
+    "print"
    ]
   }
  ],
